--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,9 @@ a:hover {
   color: #fff;
 }
 
-#hint,
+#buyAlbum,
+#submitFav,
+#submitInfo,
 legend {
   display: none;
 }
@@ -130,10 +132,14 @@ header h2 {
   position: absolute;*/
 }
 
+h1 {
+  color: #b5d505
+}
+
 h3 {
   font-size: 2em;
   text-transform: uppercase;
-  color: #b1bc05;
+  color: #b5d505
   margin-top: 10px;
 }
 
@@ -141,18 +147,24 @@ button,
 .buy {
   border-radius: 5px;
   font-size: 1.2em;
-  background-color: #E06909;
+  background-color: #922303;
   border: none;
   color: #fff;
   padding: 10px 30px;
-  box-shadow: 2px 2px 8px #000;
-  box-shadow: inset 0 0 0 1px #2f2810;
+  -webkit-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
 }
 
 button:hover,
 .buy:hover {
-   background-color: #B45304;
+   background-color: #C12D02;
    cursor: pointer;
+}
+
+p:nth-of-type(2) {
+  margin-bottom: 40px;
 }
 
 /* Footer styles */
