--- a/css/survey.css
+++ b/css/survey.css
@@ -1,5 +1,9 @@
 /* Survey page styles */
 
+h3 {
+  color: #b5d505
+}
+
 fieldset {
   border: 0;
 }
@@ -33,6 +37,7 @@ input[type=email],
 textarea,
 select {
   outline: none;
+  border-radius: 5px;
   margin-bottom: 20px;
   width: 100%;
   padding: 5px;
@@ -86,7 +91,11 @@ form {
   }
 
   .container{
-  text-align: left;
+   text-align: left;
+  }
+
+  .newsletter {
+    margin-top: 18px;
   }
 
   legend {
