--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ h1 {
 h3 {
   font-size: 2em;
   text-transform: uppercase;
-  color: #b5d505
+  color: #b5d505;
   margin-top: 10px;
 }
 
@@ -151,6 +151,7 @@ button,
   border: none;
   color: #fff;
   padding: 10px 30px;
+  transition: all 0.30s ease-in-out;
   -webkit-transition: all 0.30s ease-in-out;
   -moz-transition: all 0.30s ease-in-out;
   -ms-transition: all 0.30s ease-in-out;
