change button color

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ button,
 .buy {
   border-radius: 5px;
   font-size: 1.2em;
-  background-color: #922303;
+  background-color: #7c3905;
   border: none;
   color: #fff;
   padding: 10px 30px;
