--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ body {
 
 a {
   text-decoration: none;
-  color: #FFF;
 }
 
 a:hover {
@@ -63,10 +62,12 @@ legend {
 
 .nav a {
   transition: all .5s;
+  font-weight: bold;
+  color: #b5d505;
 }
 
 .nav a:hover {
-  color: #d2df02;
+    color: #FFFFFF;
 }
 
 header {
@@ -111,11 +112,11 @@ header h2 {
   margin: 30px;
   padding: 20px 40px 40px;
   text-align: left;
-  border-top: 4px solid #FFF;
+  border-top: 4px solid #4F5D01;
   clear: both;
 }
 .card:hover {
-  border-color: #96731A;
+  border-color: #b5d505;
 }
 
 .photo{
@@ -147,7 +148,7 @@ button,
 .buy {
   border-radius: 5px;
   font-size: 1.2em;
-  background-color: #7c3905;
+  background-color: #943805;
   border: none;
   color: #fff;
   padding: 10px 30px;
